<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2016 Johnny Shieh Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */-->
<resources>
    <string name="app_name">Gank</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- nav header-->
    <string name="nav_header_title">Gank</string>
    <string name="nav_today">Today</string>
    <string name="nav_welfare">welfare</string>
    <string name="nav_android">Android</string>
    <string name="nav_ios">iOS</string>
    <string name="nav_front_end">Front</string>
    <string name="nav_extra">Extra</string>
    <string name="nav_casual">Casual</string>
    <string name="nav_video">Video</string>
    <string name="nav_app">App</string>
    <string name="nav_all">All</string>
    <string name="nav_contact_title">Contact</string>
    <string name="nav_about">About</string>
    <string name="nav_feedback">Feedback</string>

    <!-- load tip -->
    <string name="load_fail">Load failed, Please slide up to try again</string>
    <string name="load_no_more">There is nothing more</string>

    <!-- about page -->
    <string name="about_introduction">Introduction</string>
    <string name="about_developer">Developer</string>
    <string name="developer_name">Johnny Shieh</string>
    <string name="developer_github">https://github.com/JohnnyShieh</string>
    <string name="developer_blog">http://johnnyshieh.github.io/</string>
    <string name="open_source_library">Open Source Library</string>
    <string name="open_source_library_content">RxJava: https://github.com/ReactiveX/RxJava\n\nRxAndroid: https://github.com/ReactiveX/RxAndroid\n\nRetrofit: https://github.com/square/retrofit\n\nOkhttp: https://github.com/square/okhttp\n\nGlide: https://github.com/bumptech/glide\n\nDagger2: https://github.com/google/dagger\n\nLeakcanary: https://github.com/square/leakcanary\n\nButterknife: https://github.com/JakeWharton/butterknife\n\nRxFlux: https://github.com/JohnnyShieh/RxFlux\n\nGson: https://github.com/google/gson\n\nLogger: https://github.com/tianzhijiexian/logger</string>

</resources>
