<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2016 Johnny Shieh Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_menu_today"
            android:title="@string/nav_today"
            android:checked="true"/>
        <item
            android:id="@+id/nav_android"
            android:icon="@drawable/ic_menu_android"
            android:title="@string/nav_android"/>
        <item
            android:id="@+id/nav_ios"
            android:icon="@drawable/ic_menu_ios"
            android:title="@string/nav_ios"/>
        <item
            android:id="@+id/nav_front_end"
            android:icon="@drawable/ic_menu_front_end"
            android:title="@string/nav_front_end"/>
        <item
            android:id="@+id/nav_welfare"
            android:icon="@drawable/ic_menu_welfare"
            android:title="@string/nav_welfare"/>
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_video"
            android:title="@string/nav_video"/>
<!--        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_menu_all"
            android:title="@string/nav_all"/>-->
    </group>

    <item android:title="@string/nav_contact_title">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/nav_about"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/nav_feedback"/>
        </menu>
    </item>

</menu>
