<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2016 Johnny Shieh Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */-->
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        >
        <!-- introduction -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/about_title_padding_top"
            android:paddingBottom="@dimen/about_title_padding_bottom"
            android:text="@string/about_introduction"
            style="@style/HeaderTitleTextAppearance"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/about_content_vertical_padding"
            android:paddingBottom="@dimen/about_content_vertical_padding"
            android:autoLink="web"
            android:text="@string/about_introduction_content"
            style="@style/TitleTextAppearance"
            />

        <!-- developer -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/about_title_padding_top"
            android:paddingBottom="@dimen/about_title_padding_bottom"
            android:text="@string/about_developer"
            style="@style/HeaderTitleTextAppearance"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/about_content_vertical_padding"
            android:paddingBottom="@dimen/about_content_vertical_padding"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer_name"
                style="@style/TitleTextAppearance"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/developer_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="@dimen/developer_item_icon_width"
                    android:layout_height="@dimen/developer_item_icon_width"
                    android:layout_marginRight="@dimen/developer_item_icon_margin_right"
                    android:src="@drawable/ic_blog"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/developer_blog"
                    style="@style/TitleTextAppearance"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/developer_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="@dimen/developer_item_icon_width"
                    android:layout_height="@dimen/developer_item_icon_width"
                    android:layout_marginRight="@dimen/developer_item_icon_margin_right"
                    android:src="@drawable/ic_github"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/developer_github"
                    style="@style/TitleTextAppearance"
                    />
            </LinearLayout>
        </LinearLayout>

        <!-- open source library -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/about_title_padding_top"
            android:paddingBottom="@dimen/about_title_padding_bottom"
            android:text="@string/open_source_library"
            style="@style/HeaderTitleTextAppearance"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/about_content_vertical_padding"
            android:paddingBottom="@dimen/about_content_vertical_padding"
            android:autoLink="web"
            android:text="@string/open_source_library_content"
            style="@style/TitleTextAppearance"
            />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>